<resources>
    <string name="app_name">HomeTaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="title_profile">Profile</string>
    <string name="get_code">Get code</string>
    <string name="skip">Skip</string>
    <string name="title_onboard">Board</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="delete_task">Delete task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="this_is_must_be_written">Это поле обязательно для заполнения</string>
    <string name="google">Google</string>
    <string name="phone">Phone</string>
    <string name="or">Or</string>
    <string name="task">Task</string>
    <string name="authentication">Authentication</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="make_authorization">Make authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="get_started">Get Started</string>
    <string name="car_name">Car name</string>
    <string name="car_model">Car model</string>
</resources>