<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.task.TaskFragment">

    <EditText
        style="@style/FragmentTaskEditText"
        android:id="@+id/et_title"
        android:hint="@string/title"
        tools:ignore="Autofill,TextFields" />

    <EditText
        style="@style/FragmentTaskEditText"
        android:id="@+id/et_desc"
        android:hint="@string/description"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btn_save_or_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/save" />

</LinearLayout>