<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthPhoneFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/MyTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_code"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_verification_code"
        style="@style/MyTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

</LinearLayout>