<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_board"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_skip" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/ItemOnBoardTextView"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_board"
        tools:ignore="MissingConstraints"
        tools:text="Task Manager" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/ItemOnBoardTextView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="12dp"
        android:paddingHorizontal="32dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="MissingConstraints"
        tools:text="Description" />

    <!--Посмотреть как объединить элменты в список и задать значение между ними-->
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/get_started"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <TextView
        android:id="@+id/tv_skip"
        style="@style/ItemOnBoardingTextViewButtons"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_next"
        style="@style/ItemOnBoardingTextViewButtons"
        android:text="@string/next"
        android:textColor="@color/blue"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_arrow_blue_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>